--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -7,11 +7,17 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
+    <div class="container">
 
-{% block content %}{% endblock %}
+        {% block content %}{% endblock %}
+
+    </div>
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="/static/app.js"></script>
 </body>
 </html>
+
+
+
 
