--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -5,6 +5,6 @@
 {% block content %}
 
     <h1>Test</h1>
-    <a class="btn btn-primary" href="https://accounts.spotify.com/authorize?client_id=8aee06a9d32647a698e052031bd05312&redirect_uri=http%3A%2F%2Flocalhost%3A5000%2Fspotify%2Fauth&response_type=code">Login to Spotify to Begin</a>
+    <a class="btn btn-primary" href="https://accounts.spotify.com/authorize?client_id=8aee06a9d32647a698e052031bd05312&redirect_uri=http%3A%2F%2Flocalhost%3A5000%2Fspotify%2Fauth&response_type=code&scope=playlist-modify-private">Login to Spotify to Begin</a>
 
 {% endblock %}
