--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -14,6 +14,7 @@
     </div>
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="/static/app.js"></script>
 </body>
 </html>
