moved login to server side

--- a/web/templates/results.html
+++ b/web/templates/results.html
@@ -1,16 +1,27 @@
 {% extends "base.html" %}
 
-{% block title %}Results 1{% endblock %}
+{% block title %}Results{% endblock %}
 
 {% block content %}
 
-<h1>Results 1</h1>
+<h6>Clicking on these links will open them in Spotify. You can log in to Spotify in your own client or using our link.</h6>
+<a href="https://accounts.spotify.com/authorize?client_id=8aee06a9d32647a698e052031bd05312&redirect_uri=http%3A%2F%2Flocalhost%3A5000%2Fuser_auth&response_type=code&playlist-modify-public" class="btn btn-success">Login to Spotify</a>
 
-{{results}}
+
+<ul>
+    {% for result in resp['tracks'] %}
+        <li><a href="{{result['external_urls']['spotify']}}" target="blank">{{result['artists'][0].name}} - {{result.name}}</a></li>
+    {% endfor %}
+</ul>
+
+ {% for track in track_list %}
+ <div class="container">
+
+     <iframe src="https://open.spotify.com/embed/track/{{track}}" width="400px" height="100px" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+ </div>
+{% endfor %}
 
 
-<iframe src="https://open.spotify.com/embed/playlist/{{playlist_id}}" width="400px" height="500px" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
-<a href="/delete" name="unfollow_playlist" class="btn btn-danger">Delete Playlist</a>
 
 {% endblock %}
