--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -6,6 +6,9 @@
 
     <h1>Welcome to the Spotify Recommendation Playground</h1>
     <p>This app requires you to login to Spotify and grant permission to allow this app to modify your playlists. We will only create and remove playlists from your Spotify account as you direct. No functionaility in this app alters any other Spotify data.</p>
-    <a class="btn btn-success" href="/auth">Login with Spotify</a>
+    <a class="btn btn-success" href="/auth">No Playlists</a>
+
+    <a href="https://accounts.spotify.com/authorize?client_id=8aee06a9d32647a698e052031bd05312&response_type=code&redirect_uri=http%3A%2F%2Flocalhost%3A5000%2Fuser_auth&scope=playlist-modify-public%20playlist-modify-private" class="btn btn-success">I Want Playlists</a>
+
 
 {% endblock %}
